--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@modelcontextprotocol/sdk": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "graphql-request": "^7.1.2",
     "viem": "^2.23.9",
     "zod": "^3.24.2"
   },
