--- a/package.json
+++ b/package.json
@@ -31,29 +31,30 @@
     "ens-analytics": "bun run src/core/services/ens/scripts/ens-analytics.ts",
     "ens-monitor": "bun run src/core/services/ens/scripts/ens-monitoring.ts",
     "build:ens": "bun build src/core/services/ens/scripts/*.ts --outdir build/ens --target node",
-    "electron:dev": "bun run src/electron/index.ts",
-    "electron:build": "bun build src/electron/index.ts --outdir build/electron --target node",
-    "electron:start": "bun run build/electron/index.js",
-    "electron:package": "electron-builder",
-    "electron:make": "electron-builder"
+    "electron:dev": "electron .",
+    "electron:build": "electron-builder",
+    "electron:start": "electron-forge start",
+    "electron:package": "electron-forge package",
+    "electron:make": "electron-forge make"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.8.0",
+    "@electron-forge/maker-deb": "^7.8.0",
+    "@electron-forge/maker-rpm": "^7.8.0",
+    "@electron-forge/maker-squirrel": "^7.8.0",
+    "@electron-forge/maker-zip": "^7.8.0",
+    "@electron-forge/plugin-webpack": "^7.8.0",
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "conventional-changelog-cli": "^5.0.0",
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "electron": "^28.1.0",
+    "css-loader": "^7.1.2",
+    "electron": "^36.1.0",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "ts-loader": "^9.5.1",
-    "style-loader": "^3.3.4",
-    "css-loader": "^6.8.1"
+    "webpack": "^5.99.7",
+    "webpack-cli": "^6.0.1"
   },
   "peerDependencies": {
     "typescript": "^5.8.2"
