fix: update ENS functions import path

--- a/package.json
+++ b/package.json
@@ -46,10 +46,16 @@
     "@electron-forge/plugin-webpack": "^7.8.0",
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
+    "@types/electron": "^1.6.12",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.15.12",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "conventional-changelog-cli": "^5.0.0",
     "css-loader": "^7.1.2",
     "electron": "^36.1.0",
+    "eslint": "^9.26.0",
+    "prettier": "^3.5.3",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
@@ -61,14 +67,14 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
+    "commander": "^11.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql-request": "^7.1.2",
-    "viem": "^2.23.9",
-    "zod": "^3.24.2",
-    "lru-cache": "^10.0.0",
     "limiter": "^2.1.0",
-    "commander": "^11.0.0"
+    "lru-cache": "^10.0.0",
+    "viem": "^2.23.9",
+    "zod": "^3.24.2"
   },
   "keywords": [
     "mcp",
