--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
+    "ethers": "^6.14.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "viem": "^2.23.9",
