--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "src/index.ts",
   "type": "module",
   "version": "2.0.0",
-  "description": "MCP server for interacting with EVM-compatible blockchains - supports 28 tools across 86+ networks",
+  "description": "MCP server for interacting with EVM-compatible blockchains - supports 21 tools and 9 prompts across 60+ networks",
   "bin": {
     "evm-mcp-server": "./bin/cli.js"
   },
